# alui.cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO  conanfile.py
.github/workflows/: docs.yml  tests.yml
assets/: CMakeLists.txt
demos/: CMakeLists.txt
demos/src/: AllWidgets.cpp  ComponentHierarchy.cpp  GameMenu.cpp  HitboxDebug.cpp
docs/: Positioning.md
src/: CMakeLists.txt
src/alui/: Component.cpp  Component.hpp  GUI.cpp  GUI.hpp  Layout.cpp  Layout.hpp
src/alui/component/: Component.cpp  Component.hpp  ComponentConfig.hpp  FlexDirection.hpp  Magnitude.hpp  Scalar.hpp  ScalarType.hpp  Size.hpp  SizeUnit.hpp  Sizing.hpp
src/alui/components/: Button.hpp  ImageComponent.cpp  ImageComponent.hpp  Text.cpp  Text.hpp
src/alui/components/sub/: Scrollbar.hpp
src/alui/images/: Image.hpp
src/alui/layouts/: FlexBox.cpp  FlexBox.hpp
src/alui/meta/: Clipboard.hpp  NoopClipboard.cpp
src/alui/style/: BackgroundColourStyle.cpp  BackgroundColourStyle.hpp  BorderStyle.cpp  BorderStyle.hpp  Style.hpp  StyleStates.hpp
tests/: CMakeLists.txt
tests/3p/: README.md
tests/src/: Conf.hpp  Runner.cpp
tests/src/bench/: Layouts.cpp
tests/src/fixtures/: AlImage.hpp  Font.hpp  ImageAssets.hpp  SetupGUI.hpp
tests/src/real-world/: FullScreenPartialCover.cpp  FullScreenPartialCoverTests.cpp  ImageInContainerTests.cpp  ScrollTests.cpp
tests/src/unit/: Initialisers.cpp
tests/src/unit/components/: TextTests.cpp
tests/src/unit/layouts/: FlexBoxTests.cpp
tests/src/util/: Display.cpp  Display.hpp  Style.hpp  WordSoup.hpp
tests/src/util/allegro/: EventGenerator.hpp  ScrollHelper.hpp
